# tile-geopandas

./: .gitignore  LICENSE  README.md  pyproject.toml
tile_geopandas/: __init__.py  core.py
tile_geopandas/mixins/: __init__.py  io_mixin.py  tile_mixin.py  topo_mixin.py
tile_geopandas/operation/: fix_polygon_topology.py
