[project]
name = "tile-geopandas"
version = "0.1.0"
description = "parallel version fo geopandas using tile-splitting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "geopandas>=1.1.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "duckdb",
    "s3fs",
    "tqdm",
    "typeguard",
    "shapely>=2.0.0",
    "joblib", 
]